--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jshint": "^2.9.2",
     "karma": "^1.1.1",
     "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jshint-preprocessor": "0.0.6",
     "karma-phantomjs-launcher": "^1.0.1",
